test_regress/t/t_queue_method_bad.out
%Error-UNSUPPORTED: t/t_queue_method_bad.v:15:14: Unsupported/unknown built-in queue method 'unique'
                                                : ... In instance t
   15 |       qv = q.unique with (1);   
      |              ^~~~~~
%Error-UNSUPPORTED: t/t_queue_method_bad.v:16:9: Unsupported/unknown built-in queue method 'reverse'
                                               : ... In instance t
   16 |       q.reverse(1);   
      |         ^~~~~~~
%Error-UNSUPPORTED: t/t_queue_method_bad.v:17:9: Unsupported/unknown built-in queue method 'shuffle'
                                               : ... In instance t
   17 |       q.shuffle(1);   
      |         ^~~~~~~
%Error-UNSUPPORTED: t/t_queue_method_bad.v:18:14: Unsupported/unknown built-in queue method 'find'
                                                : ... In instance t
   18 |       qv = q.find;   
      |              ^~~~
%Error-UNSUPPORTED: t/t_queue_method_bad.v:19:14: Unsupported/unknown built-in queue method 'find_first'
                                                : ... In instance t
   19 |       qv = q.find_first;   
      |              ^~~~~~~~~~
%Error-UNSUPPORTED: t/t_queue_method_bad.v:20:14: Unsupported/unknown built-in queue method 'find_last'
                                                : ... In instance t
   20 |       qv = q.find_last;   
      |              ^~~~~~~~~
%Error-UNSUPPORTED: t/t_queue_method_bad.v:21:14: Unsupported/unknown built-in queue method 'find_index'
                                                : ... In instance t
   21 |       qi = q.find_index;   
      |              ^~~~~~~~~~
%Error-UNSUPPORTED: t/t_queue_method_bad.v:22:14: Unsupported/unknown built-in queue method 'find_first_index'
                                                : ... In instance t
   22 |       qi = q.find_first_index;   
      |              ^~~~~~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_queue_method_bad.v:23:14: Unsupported/unknown built-in queue method 'find_last_index'
                                                : ... In instance t
   23 |       qi = q.find_last_index;   
      |              ^~~~~~~~~~~~~~~
%Error: t/t_queue_method_bad.v:25:19: 'with' not legal on this method
                                    : ... In instance t
   25 |       qi = q.size with (1);   
      |                   ^~~~
%Error: Exiting due to
